Prevent spurious indentation with ragged2e

--- a/mla13.sty
+++ b/mla13.sty
@@ -153,9 +153,9 @@
 \rmfamily
 \fontsize{12}{2}
 \noindent \@firstname\ \@lastname\\
-\@professor\\
-\@class\\
-\datef\@date
+\noindent \@professor\\
+\noindent \@class\\
+\noindent \datef\@date
 \begin{nospacecenter}
 \@title
 \end{nospacecenter}
