Make it a documentclass instead of a package

--- a/mla13.cls
+++ b/mla13.cls
@@ -1,4 +1,7 @@
-\ProvidesPackage{mla13}
+\NeedsTeXFormat{LaTeX2e}
+\ProvidesClass{mla13}
+
+\LoadClass[12pt]{article}
 
 \newif\if@justify\@justifyfalse
 \DeclareOption{justify}{
