--- a/mla.cls
+++ b/mla.cls
@@ -256,6 +256,9 @@
 %% Use American-style quotation marks.
 \usepackage[american]{babel}
 
+%% Hyperlink bibliography entries.
+\usepackage{hyperref}
+
 %% Package doing all of our bibliography stuff.
 \usepackage[style=mla,mladraft=true,annotation=true]{biblatex}
 
