Add outline environment

--- a/mla.cls
+++ b/mla.cls
@@ -222,11 +222,6 @@
   \fi%
   \printbibliography}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%% Enumeration
-\renewcommand{\labelenumi}{\Roman{enumi}.}
-\renewcommand{\labelenumii}{\Alph{enumii}.}
-\renewcommand{\labelenumiii}{\arabic{enumiii}.}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%% Sectioning commands
@@ -347,3 +342,10 @@
       \end{quotation}}%
     {}}%
 }
+
+\newenvironment{outline}
+{
+    \renewcommand{\labelenumi}{\Roman{enumi}.}
+    \renewcommand{\labelenumii}{\Alph{enumii}.}
+    \renewcommand{\labelenumiii}{\arabic{enumiii}.}
+}{}
